test/snapshot/sampleProjects/legacySuffixSupport/__snapshots__/verify-md-files.expected/objects/LogEntryArchive__b.object
<CustomObject>
    <description>Big Object representation of Logger data, used as an alternative to the platform event LogEntryEvent__e, as well as a way to archive Logger data stored in Log__c, LogEntry__, and LogEntryTag__c</description>
    <label>Log Entry Archive</label>
    <pluralLabel>Log Entry Archives</pluralLabel>
    <fields>
        <fullName>Timestamp__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransactionEntryNumber__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The sequential number of this log entry within the transaction</description>
        <label>Entry #</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Transaction ID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>LogEntryArchiveIndex</fullName>
        <fields>
            <name>Timestamp__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>TransactionId__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>TransactionEntryNumber__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>Log Entry Archive Index</label>
    </indexes>
</CustomObject>